# WarCardGameProject

./: CMakeLists.txt  CardClass.cpp  CardClass.h  DeckClass.cpp  DeckClass.h  GameClass.cpp  GameClass.h  MainDriver.cpp  OutputClass.cpp  OutputClass.h  README.md  StackClass.cpp  StackClass.h  Standards.h
